// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionList demo -- actionChildren 1`] = `
.emotion-10 > .uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-10 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-10 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-6 {
  vertical-align: baseline;
}

.emotion-10 > .uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-10 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-10 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-6 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-10 emotion-11"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-6 emotion-7"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionList demo -- actionList 1`] = `
.emotion-105 > .uc-fe-combine-item,
.emotion-105 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-105 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-105 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-105 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-105 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-105 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-95 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-95:link,
.emotion-95:visited {
  color: #0a1633;
}

.emotion-95:hover,
.emotion-95:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-66 {
  vertical-align: baseline;
}

.emotion-93 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-93 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-55 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-55 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-55 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-55 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-55 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-55 .uc-fe-switch-tip-on,
.emotion-55 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-55 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-55 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-55 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-55 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-55:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #e6ffed;
}

.emotion-55 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-55 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-55 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #e6ffed;
  background: #15ad31;
}

.emotion-55 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-55 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-55 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-70 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-70 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-70 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-70 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-70 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70:hover {
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-70 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-70 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-70 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-70 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-105 > .uc-fe-combine-item,
.emotion-105 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-105 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-105 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-105 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-105 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-105 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-95 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-95:link,
.emotion-95:visited {
  color: #0a1633;
}

.emotion-95:hover,
.emotion-95:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-66 {
  vertical-align: baseline;
}

.emotion-93 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-93 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-55 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-55 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-55 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-55 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-55 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-55 .uc-fe-switch-tip-on,
.emotion-55 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-55 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-55 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-55 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-55 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-55:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #e6ffed;
}

.emotion-55 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-55 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-55 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #e6ffed;
  background: #15ad31;
}

.emotion-55 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-55 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-55 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-70 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-70 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-70 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-70 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-70 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-70 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-70:hover {
  border-color: #c3cad9;
}

.emotion-70 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-70 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-70 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-70 .uc-fe-numberinput-handler-up,
.emotion-70 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-70 .uc-fe-numberinput-handler-up:hover,
.emotion-70 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-70 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-70 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-93 emotion-94"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-71"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        button styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-71"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              primary
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              border
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              border-gray
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        smart
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          checked=""
          class="emotion-55 emotion-56"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        exposeCount
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-70 emotion-71"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-66 emotion-67"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-66 emotion-67"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="3"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        actionListLength
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-70 emotion-71"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-66 emotion-67"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-66 emotion-67"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="5"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-105 emotion-106"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-95 emotion-96"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-95 emotion-96"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-95 emotion-96"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-95 emotion-96"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-66 emotion-67"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionList demo -- dropdownButton 1`] = `
.emotion-8 > .uc-fe-combine-item,
.emotion-8 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-8 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-8 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-8 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-8 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-8 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-16 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-16:link,
.emotion-16:visited {
  color: #ffffff;
}

.emotion-16:hover,
.emotion-16:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-8 > .uc-fe-combine-item,
.emotion-8 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-8 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-8 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-8 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-8 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-8 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-16 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-16:link,
.emotion-16:visited {
  color: #ffffff;
}

.emotion-16:hover,
.emotion-16:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-8 emotion-9"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          更多
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-8 emotion-9"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-16 emotion-1"
          type="button"
        >
          更多
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionList demo -- exposeCount 1`] = `
.emotion-4 > .uc-fe-combine-item,
.emotion-4 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-4 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-4 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-4 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-4 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-4 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-4 > .uc-fe-combine-item,
.emotion-4 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-4 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-4 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-4 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-4 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-4 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-4 emotion-5"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-0 emotion-1"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-4 emotion-5"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 3
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-0 emotion-1"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-4 emotion-5"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 3
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 4
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
          type="button"
        >
          Action 5
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionList demo -- popoverProps 1`] = `
.emotion-6 > .uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-6 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-6 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-2 {
  vertical-align: baseline;
}

.emotion-6 > .uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-6 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-6 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-2 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <div />
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-6 emotion-7"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-2 emotion-3"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionList demo -- size 1`] = `
.emotion-22 > .uc-fe-combine-item,
.emotion-22 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-22 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-22 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-22 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-22 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-22 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-12 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-12:link,
.emotion-12:visited {
  color: #0a1633;
}

.emotion-12:hover,
.emotion-12:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-6 {
  vertical-align: baseline;
}

.emotion-10 > .uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-10 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-10 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 4px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-34 > .uc-fe-combine-item,
.emotion-34 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-34 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-34 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-34 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-34 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-34 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 12px;
}

.emotion-24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  line-height: 32px;
  padding: 0 12px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 11px;
  line-height: 30px;
}

.emotion-24:link,
.emotion-24:visited {
  color: #0a1633;
}

.emotion-24:hover,
.emotion-24:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-22 > .uc-fe-combine-item,
.emotion-22 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-22 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-22 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-22 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-22 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-22 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-12 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-12:link,
.emotion-12:visited {
  color: #0a1633;
}

.emotion-12:hover,
.emotion-12:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-6 {
  vertical-align: baseline;
}

.emotion-10 > .uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-10 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-10 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 4px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-34 > .uc-fe-combine-item,
.emotion-34 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-34 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-34 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-34 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-34 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-34 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 12px;
}

.emotion-24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  line-height: 32px;
  padding: 0 12px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 11px;
  line-height: 30px;
}

.emotion-24:link,
.emotion-24:visited {
  color: #0a1633;
}

.emotion-24:hover,
.emotion-24:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-10 emotion-11"
      spacing="sm"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-6 emotion-7"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-22 emotion-11"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-12 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-12 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-12 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-12 emotion-1"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-6 emotion-7"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-34 emotion-11"
      spacing="lg"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-24 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-24 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-24 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border emotion-24 emotion-1"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-6 emotion-7"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionList demo -- smart 1`] = `
.emotion-12 > .uc-fe-combine-item,
.emotion-12 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-12 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-12 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-12 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-12 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-12 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-24 {
  vertical-align: baseline;
}

.emotion-12 > .uc-fe-combine-item,
.emotion-12 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-12 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-12 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-12 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-12 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-12 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-24 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-12 emotion-13"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 3
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 4
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 5
        </button>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-12 emotion-13"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 0
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 3
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Action 4
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-24 emotion-25"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionList demo -- tooltip 1`] = `
.emotion-10 > .uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-10 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-10 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-4:link,
.emotion-4:visited {
  color: #0a1633;
}

.emotion-4:hover,
.emotion-4:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-6 {
  vertical-align: baseline;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-0:link,
.emotion-0:visited {
  color: #ffffff;
}

.emotion-0:hover,
.emotion-0:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  background: #f7f7f7;
  color: #cccccc;
  fill: #cccccc;
  cursor: default;
  border-color: #d9d9d9;
  box-shadow: none;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-10 > .uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-10 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-10 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-10 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-4:link,
.emotion-4:visited {
  color: #0a1633;
}

.emotion-4:hover,
.emotion-4:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-6 {
  vertical-align: baseline;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-0:link,
.emotion-0:visited {
  color: #ffffff;
}

.emotion-0:hover,
.emotion-0:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  background: #f7f7f7;
  color: #cccccc;
  fill: #cccccc;
  cursor: default;
  border-color: #d9d9d9;
  box-shadow: none;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine uc-fe-actionlist emotion-10 emotion-11"
      spacing="md"
    >
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-0 emotion-1"
          type="button"
        >
          Action 1
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled uc-fe-button-disabled-fake emotion-2 emotion-1"
          type="button"
        >
          Action 2
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled-fake emotion-4 emotion-1"
          type="button"
        >
          Action 3
        </button>
      </div>
      <div
        class="uc-fe-combine-item"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-4 emotion-1"
          type="button"
        >
          <i
            class="uc-fe-icon icon__ellipsis uc-fe-button-icon emotion-6 emotion-7"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
